# magnumTest

./: .gitmodules  CMakeLists.txt
magnum2d/: CMakeLists.txt  Magnum2D.cpp  Magnum2D.h  Magnum2D.html
projects/: CMakeLists.txt
projects/rope/: CMakeLists.txt  main.cpp  utils.cpp  utils.h
projects/rope-collisions/: CMakeLists.txt  application.cpp  application.h  collisions.cpp  collisions.h  globals.h  magnum.natvis  main.cpp  rope.cpp  rope.h  utils.cpp  utils.h
projects/space/: CMakeLists.txt  bodies.cpp  bodies.h  burnsHandler.cpp  burnsHandler.h  camera.cpp  camera.h  common.cpp  common.h  main.cpp  point.cpp  point.h  ship.cpp  ship.h  simulation.cpp  simulation.h  simulationBodies.h  testBodies.h  testMassPoint.h  trajectory.cpp  trajectory.h  utils.cpp  utils.h  vectorHandler.cpp  vectorHandler.h
projects/space/assets/: resources.conf  solar_system.json  test_system.json
projects/space/conicfit/: conicApproximation.cpp  conicApproximation.h  conicFit.h
projects/space/conicfit/Eigen/src/Core/functors/: StlFunctors.h
projects/template/: CMakeLists.txt  main.cpp
projects/view/: CMakeLists.txt  main.cpp
src/: Application2D.cpp  Application2D.h  CMakeLists.txt  main.cpp  utils.cpp  utils.h
